--- a/popup.html
+++ b/popup.html
@@ -3,9 +3,37 @@
   <head>
     <title>Your Extension Name</title>
     <script src="popup.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap" rel="stylesheet">
+    <style>
+      .avatar {
+        vertical-align: middle;
+        width: 200px;
+        height: 200px;
+        border-radius: 50%;
+      }
+      .container{
+        width: 300px;
+        height: 300px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+      }
+      .betterPR{
+        font-family: 'Source Code Pro', monospace;
+        display: flex;
+        flex-direction: row;
+      }
+      </style>
   </head>
   <body>
-    <h1>Hello, Better PR, Extension!</h1>
-    <img src="./team-logo.png" alt="Better-PR" />
+    <div class="container">
+      <div class="betterPR">
+        <h1 style="color:#595959">Better</h1>
+        <h1 style="color:#4F82C0;">PR</h1>
+      </div>
+      <img src="./team-logo.png" alt="Better-PR" class="avatar"/>
+    </div>
   </body>
 </html>
